--- a/sports.html
+++ b/sports.html
@@ -21,7 +21,7 @@
     </header>
    <main>
     <div class="container">
-        <div id="game" class="justify-center flex-column">
+        <div id="game">
             <h1>Sports Questions</h1>
             <div id="hud">
                 <div class="hud-item">
