--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             </div>
             <div class="box-one">
                 <h2>Literature</h2>
-                <p class="box-text"><button class="myButton"><a href="Literature.html">Play</a></button></p>
+                <p class="box-text"><button class="myButton"><a href="literature.html">Play</a></button></p>
             </div>
         </div>
     </main>
